Column editin context menu

--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -121,6 +121,9 @@
             <height>135</height>
            </size>
           </property>
+          <property name="contextMenuPolicy">
+           <enum>Qt::ActionsContextMenu</enum>
+          </property>
           <property name="selectionBehavior">
            <enum>QAbstractItemView::SelectColumns</enum>
           </property>
